0.6.2
    - Configuration: rtps.writer.push-mode=true|false, jrtps.publish-builtin-data=true|false
    
0.6.1
    - Documentation is being generated with maven site plugin
    - jRTPS thread names contains domainId.participantId, which is 
      useful in debugging.
	
0.6.0
    - moved RTPS entities (RTPSParticipant, RTPSReader, ...) to net.sf.jrtps.rtps package.
    - Combined udds & jrtps. Now there is only one artifact: net.sf.jrtps:jrtps.
    - FIX: SequenceNumber long conversion

0.5.6
	- Rearranged udds test to examples. Initial interoperability tests for 
	  OpenSplice and OpenDDS. Not interoperable for now :|
	- FIX: Heartbeat announce period is applied only for reliable writers
	- FIX: Heartbeat response delay is applied before AckNack gets created
	- FIX: SequenceNumberSet reading/writing
	
0.5.5	
	- Artifacts are OSGi bundles

0.5.1
	- Heartbeat period
	- Artifacts are OSGi bundles
	- Renamed ReaderData -> SubscriptionData, WriterData PublicationData
	  to be more in sync with DDS specification.
	- JavaExternalizableMarshaller introduced.
	- FIX: Discovered participants was not propagated to RTPS layer. 
	- ParticipantLeaseManager introduced

0.5.0
	- Moved some classes from net.sf.jrtps to udds. Most of the DDS 
	  knowledge is moved. jRTPS remains as a communication library, 
          dealing with message parsing and handling of different RTPS 
	  messages, like Heartbeat & AckNack.
	  
	  The contract between DDS and RTPS is clarified. In short, DDS 
	  implementation is responsible for creation of RTPS entities. Also, 
	  determination of matched reader/writer is the responsibility of DDS 
	  layer. For writers, data is communicated through WriterCache and 
	  by a call to notifyReaders(). QualityOfService stuff is moved to 
	  uDDS as much as possible.
	
0.4.3
	- History cache work.
	- QosDurability. VOLATILE readers are sent only data after match 
	  making. For other readers, TRANSIENT_LOCAL behavior is presented.